--- a/captionhtml/breakingnews.html
+++ b/captionhtml/breakingnews.html
@@ -6,12 +6,8 @@
     <meta charset="UTF-8">
     <title>breakingnews</title>
     <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: Signika;
-            src: url(rendering/fonts/Signika.woff2);
-        }
-
         * {
             margin: 0;
             padding: 0;
