--- a/captionhtml/givemeyourphone.html
+++ b/captionhtml/givemeyourphone.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>gmyp</title>
     <base href="../">
-    <style>
-        body {
-            margin: 0;
-        }
+    <link href="rendering/common.css" rel="stylesheet">
 
+    <style>
         #base {
             position: relative;
             top: 0;
