--- a/captionhtml/motivate.html
+++ b/captionhtml/motivate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>motivate</title>
     <base href="../">
+    <link href="rendering/common.css" rel="stylesheet">
     <script src="rendering/twemoji/twemoji.js"></script>
 
     <style>
@@ -18,16 +19,6 @@
         body {
             font-size: 0;
             background: black;
-            text-align: center;
-            margin: 0;
-            word-break: break-word;
-        }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
         }
 
         .img {
@@ -47,6 +38,7 @@
             font-family: "Times New Roman", sans-serif;
             color: white;
             font-size: calc(13.3 * var(--1vw));
+            text-align: center;
         }
 
         .captionsmall {
@@ -56,8 +48,6 @@
             /*margin-bottom: 20px;*/
 
         }
-
-
     </style>
 </head>
 <body>
