--- a/captionhtml/mycaptionbottom.html
+++ b/captionhtml/mycaptionbottom.html
@@ -1,44 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
-    <title>&caption</title>
+    <title>mycaptionbottom</title>
+    <base href="../">
+    <link href="rendering/common.css" rel="stylesheet">
     <script src="rendering/twemoji/twemoji.js"></script>
     <style>
-        @font-face {
-            font-family: caption;
-            src: url(rendering/fonts/Lato-Bold.ttf);
-            /*    caption.otf is futura extra condensed bold but this file is just taken from esmbot's repo lol*/
-        }
-
-        /*@font-face {
-            font-family: twemoji;
-            src: url(rendering/fonts/twemoji.ttf);
-        }*/
-
-
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            outline: 0;
-            font-size: 100%;
-            vertical-align: baseline;
-            background: transparent;
-        }
-
-        body {
-            font-size: 0;
-            word-break: break-word;
-        }
-
         .caption {
-            -webkit-font-smoothing: antialiased;
             background: white;
             font-family: caption, /*twemoji,*/ sans-serif;
-            text-align: center;
-            word-wrap: break-word;
             font-size: 10vw;
             padding: 3vw;
         }
@@ -47,19 +18,6 @@
             min-width: 100%;
             margin: 0;
         }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
-        }
-
-        /*.caption span {
-            vertical-align: middle;
-        }*/
-
-
     </style>
 </head>
 <body>
