--- a/captionhtml/tenorcap.html
+++ b/captionhtml/tenorcap.html
@@ -3,27 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>motivate</title>
-    <script src="rendering/twemoji/twemoji.js"></script>
     <base href="../">
+    <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: tenor;
-            src: url(rendering/fonts/Ubuntu-R.ttf);
-        }
-
         body {
             font-size: 0;
-            text-align: center;
-            margin: 0;
-            word-break: break-word;
-
-        }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
         }
 
         .wrap {
@@ -51,16 +36,6 @@
             width: 100%;
             /*overflow: hidden;*/
         }
-
-        .top {
-            top: 0;
-        }
-
-        .bottom {
-            bottom: 0;
-        }
-
-
     </style>
 </head>
 <body>
