--- a/captionhtml/epicbirthdaytext.html
+++ b/captionhtml/epicbirthdaytext.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yskysn</title>
-    <script src="rendering/twemoji/twemoji.js"></script>
+    <title>epic birthday text</title>
     <base href="../">
-    <style>
-        @font-face {
-            font-family: cap;
-            src: url("rendering/fonts/MarkerFeltWide Regular.ttf");
-        }
+    <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
 
+    <style>
         body, html {
             font-size: 0;
             text-align: center;
@@ -27,33 +24,14 @@
             left: 0;
         }
 
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
-        }
-
         .caption {
-            font-family: cap, sans-serif;
+            font-family: MarkerFeltWide, sans-serif;
             color: white;
             font-size: 112px;
             text-transform: uppercase;
             text-shadow: black 5px 5px;
         }
 
-        .box-flex {
-            display: flex;
-            justify-content: center;
-            padding: 0;
-            height: 100%;
-        }
-
-        .box-flex .txt {
-            padding: 0;
-            align-self: center;
-            min-height: auto;
-        }
 
         #pad {
             width: 540px;
