--- a/captionhtml/esmcaption.html
+++ b/captionhtml/esmcaption.html
@@ -5,19 +5,8 @@
     <meta charset="UTF-8">
     <title>&caption</title>
     <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: caption;
-            src: url(rendering/fonts/caption.otf);
-            /*    caption.otf is futura extra condensed bold but this file is just taken from esmbot's repo lol*/
-        }
-
-        /*@font-face {
-            font-family: twemoji;
-            src: url(rendering/fonts/twemoji.ttf);
-        }*/
-
-
         * {
             margin: 0;
             padding: 0;
@@ -30,15 +19,11 @@
 
         body {
             font-size: 0;
-            word-break: break-word;
         }
 
         .caption {
-            -webkit-font-smoothing: antialiased;
             background: white;
-            font-family: caption, /*twemoji,*/ sans-serif;
-            text-align: center;
-            word-wrap: break-word;
+            font-family: futurabold, /*twemoji,*/ sans-serif;
             font-size: calc(100vw / 13 * (16 / 12));
             padding: calc((100vw / 2) / 13);
         }
@@ -47,19 +32,6 @@
             min-width: 100%;
             margin: 0;
         }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
-        }
-
-        /*.caption span {
-            vertical-align: middle;
-        }*/
-
-
     </style>
 </head>
 <body>
