--- a/captionhtml/imagesaycapleft.html
+++ b/captionhtml/imagesaycapleft.html
@@ -3,36 +3,14 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>&caption</title>
-    <script src="rendering/twemoji/twemoji.js"></script>
     <base href="../">
+    <title>imagesaycapleft</title>
+    <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
+
     <style>
-        @font-face {
-            font-family: caption;
-            src: url(rendering/fonts/Lato-Bold.ttf);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            outline: 0;
-            font-size: 100%;
-            vertical-align: baseline;
-            background: transparent;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-size: 0;
-            word-break: break-word;
-        }
-
         .caption {
-            -webkit-font-smoothing: antialiased;
             font-family: caption, /*twemoji,*/ sans-serif;
-            text-align: center;
-            word-wrap: break-word;
             font-size: 6vw;
             width: 100%;
             background: white;
@@ -42,29 +20,6 @@
             min-width: 100%;
             margin: 0;
         }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
-        }
-
-        body:after, .clearfix:after {
-            visibility: hidden;
-            display: block;
-            font-size: 0;
-            content: " ";
-            clear: both;
-            height: 0;
-        }
-
-        .clearfix::before,
-        .clearfix::after {
-            flex-basis: 0;
-            order: 1;
-        }
-
 
         .stuff {
             width: 30%;
@@ -87,18 +42,12 @@
         }
 
         .box-flex {
-            display: flex;
             justify-content: space-between;
+            height: initial;
         }
 
         .box-flex .img {
             order: 0;
-        }
-
-        .box-flex .txt {
-            padding: 0;
-            align-self: center;
-            min-height: auto;
         }
     </style>
 </head>
