--- a/captionhtml/meme.html
+++ b/captionhtml/meme.html
@@ -2,28 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>motivate</title>
-    <script src="rendering/twemoji/twemoji.js"></script>
+    <title>meme</title>
     <base href="../">
+    <link href="rendering/common.css" rel="stylesheet">
+    <script src="rendering/twemoji/twemoji.js"></script>
     <style>
-        @font-face {
-            font-family: impact;
-            src: url(rendering/fonts/ImpactMix.ttf);
-        }
-
         body {
             font-size: 0;
             text-align: center;
-            margin: 0;
-            word-break: break-word;
-
-        }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
         }
 
         .wrap {
@@ -52,16 +38,6 @@
             width: 100%;
             /*overflow: hidden;*/
         }
-
-        .top {
-            top: 0;
-        }
-
-        .bottom {
-            bottom: 0;
-        }
-
-
     </style>
 </head>
 <body>
@@ -83,6 +59,7 @@
         fit("fitin1")
         fit("fitin2")
     }
+
     const style = document.createElement('style');
     style.innerHTML = `.caption {\ntext-shadow:\n${calculateStrokeTextCSS(32)}\n}`;
     document.head.appendChild(style);
