--- a/captionhtml/slashscript.html
+++ b/captionhtml/slashscript.html
@@ -3,49 +3,23 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>&caption</title>
+    <title>slashscript</title>
+    <base href="../">
+    <link href="rendering/common.css" rel="stylesheet">
     <script src="rendering/twemoji/twemoji.js"></script>
     <style>
-        @font-face {
-            font-family: caption;
-            src: url(rendering/fonts/Slashscript.otf);
-        }
-
-        /*@font-face {
-            font-family: twemoji;
-            src: url(rendering/fonts/twemoji.ttf);
-        }*/
-
-
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            outline: 0;
-            font-size: 100%;
-            vertical-align: baseline;
-            background: transparent;
-        }
-
         body {
             /*font-size: 0;*/
             word-break: normal;
         }
 
         .caption {
-            -webkit-font-smoothing: antialiased;
-            /*max-width: 800px;*/
-
-            /*background: white;*/
-            font-family: caption, /*twemoji,*/ sans-serif;
-            text-align: center;
-            /*word-wrap: break-word;*/
+            font-family: slashscript, /*twemoji,*/ sans-serif;
             white-space: nowrap;
             font-size: 24pt;
-            color:white;
+            color: white;
+            text-align: left;
         }
-
-
     </style>
 </head>
 <body>
