--- a/captionhtml/snapchat.html
+++ b/captionhtml/snapchat.html
@@ -3,33 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>snapchat</title>
-    <script src="rendering/twemoji/twemoji.js"></script>
     <base href="../">
+    <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: cap;
-            src: url(rendering/fonts/HelveticaLTStd-Roman.otf);
-        }
-
         body {
             font-size: 0;
-            text-align: center;
-            margin: 0;
-            word-break: break-word;
-
-        }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
         }
 
         .caption {
-            font-family: cap, sans-serif;
-            color: white;
+            font-family: helvetica, sans-serif;
             font-size: 5vw;
+            color:white;
         }
 
         .container {
@@ -43,8 +28,6 @@
             padding: 1.5vw;
             /*overflow: hidden;*/
         }
-
-
     </style>
 </head>
 <body>
