--- a/captionhtml/stuffstretch.html
+++ b/captionhtml/stuffstretch.html
@@ -3,34 +3,13 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>&caption</title>
+    <title>stuffstretch</title>
+    <base href="../">
+    <link href="rendering/common.css" rel="stylesheet">
     <script src="rendering/twemoji/twemoji.js"></script>
     <style>
-        @font-face {
-            font-family: caption;
-            src: url(rendering/fonts/Lato-Bold.ttf);
-            /*    caption.otf is futura extra condensed bold but this file is just taken from esmbot's repo lol*/
-        }
-
-        /*@font-face {
-            font-family: twemoji;
-            src: url(rendering/fonts/twemoji.ttf);
-        }*/
-
-
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            outline: 0;
-            font-size: 100%;
-            vertical-align: baseline;
-            background: transparent;
-        }
-
         body {
             font-size: 0;
-            word-break: break-word;
         }
 
         .caption {
@@ -50,20 +29,6 @@
         .img {
             min-width: 100%;
             margin: 0;
-        }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
-        }
-
-        /*.caption span {
-            vertical-align: middle;
-        }*/
-        * {
-            box-sizing: border-box;
         }
 
         .column {
