--- a/captionhtml/twittercaption.html
+++ b/captionhtml/twittercaption.html
@@ -3,27 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>motivate</title>
+    <base href="../">
     <script src="rendering/twemoji/twemoji.js"></script>
-
+    <link href="rendering/common.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: helveticaneue;
-            src: url(rendering/fonts/HelveticaNeue.otf);
-        }
-
         body {
             font-size: 0;
             background: white;
             text-align: left;
-            margin: 0;
-            word-break: break-word;
-        }
-
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
         }
 
         .img {
@@ -43,8 +30,6 @@
             font-family: helveticaneue, sans-serif;
             font-size: 8vw;
         }
-
-
     </style>
 </head>
 <body>
