--- a/captionhtml/whisper.html
+++ b/captionhtml/whisper.html
@@ -3,31 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>whisper</title>
-    <script src="rendering/twemoji/twemoji.js"></script>
     <base href="../">
+    <script src="rendering/twemoji/twemoji.js"></script>
+    <link href="rendering/common.css" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: cap;
-            src: url(rendering/fonts/whisper.otf);
-        }
-
         body, html {
             font-size: 0;
             text-align: center;
-            margin: 0;
-            word-break: break-word;
             min-height: 100%;
         }
 
-        img.emoji {
-            height: 1em;
-            width: 1em;
-            margin: 0 .05em 0 .1em;
-            vertical-align: -0.1em;
-        }
-
         .caption {
-            font-family: cap, sans-serif;
+            font-family: whisper, sans-serif;
             color: white;
             font-size: 12vw;
             --stroke-width: 0.5vw;
@@ -48,19 +35,6 @@
             width: 100%;
             height: 100%;
         }
-
-        .box-flex {
-            display: flex;
-            justify-content: center;
-            height: 100%;
-        }
-
-        .box-flex .txt {
-            padding: 0;
-            align-self: center;
-            min-height: auto;
-        }
-
     </style>
 </head>
 <body>
