--- a/rendering/positiondiv.html
+++ b/rendering/positiondiv.html
@@ -6,7 +6,7 @@
     <style>
         @font-face {
             font-family: caption;
-            src: url(fonts/Lato-Bold.ttf);
+            src: url(fonts/AtkinsonHyperlegible-Bold.ttf);
         }
 
         body {
