--- a/captionhtml/motivate.html
+++ b/captionhtml/motivate.html
@@ -19,6 +19,7 @@
         body {
             font-size: 0;
             background: black;
+            text-align: center;
         }
 
         .img {
@@ -59,12 +60,13 @@
 </body>
 <script src="rendering/common.js"></script>
 <script>
-    window.onload = function () {
+    function onload() {
         document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth / 100}px`);
     }
+    window.onload = onload;
 
     function beforerender() {
-        // document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth/100}px`);
+        // onload();
         document.querySelectorAll(".wrap")[0].style.margin = "calc(5 * var(--1vw)) auto";
         document.querySelectorAll(".caption")[0].style.margin = "0 calc(5 * var(--1vw))";
     }
