ok NOW we can push this

--- a/captionhtml/1984.html
+++ b/captionhtml/1984.html
@@ -51,7 +51,7 @@
 <body>
 <img id="base" src="rendering/1984.png">
 <img id="top" src="rendering/1984cover.png">
-<link rel="preload" as="image" href="rendering/1984originaldate.png">
+<link as="image" href="rendering/1984originaldate.png" rel="preload">
 <div class="fitboxes" id="textbox">
     <div class="box-flex" id="textboxinner">
         <p class="txt">CaptionText1</p>
