--- a/captionhtml/dontweet.html
+++ b/captionhtml/dontweet.html
@@ -291,7 +291,7 @@
 <div class="tweetContainer" id="tweetContainer" theme="dim">
     <div class="headerContainer css-1dbjc4n">
         <div class="pfp css-1dbjc4n">
-            <img src="rendering/donal.jpg" width="49" height="49" id="pfpOutput">
+            <img height="49" id="pfpOutput" src="rendering/donal.jpg" width="49">
         </div>
         <div class="headerRight css-1dbjc4n">
             <div class="userinfo css-1dbjc4n">
