--- a/captionhtml/epicbirthdaytext.html
+++ b/captionhtml/epicbirthdaytext.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 <div id="pad">
-    <div id="fitin1" class="box-flex">
+    <div class="box-flex" id="fitin1">
     <span class="caption txt">
         CaptionText
     </span>
