--- a/captionhtml/esmcaption.html
+++ b/captionhtml/esmcaption.html
@@ -38,7 +38,7 @@
 
 <div class="caption"><span>CaptionText</span>
 </div>
-<img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+<img alt="An error has occurred loading your image." class="img" src="rendering/demoimage.png">
 </body>
 <script src="rendering/common.js"></script>
 </html>
