--- a/captionhtml/givemeyourphone.html
+++ b/captionhtml/givemeyourphone.html
@@ -31,9 +31,9 @@
     </style>
 </head>
 <body>
-<img src="rendering/givemeyourphone.jpg" id="base">
+<img id="base" src="rendering/givemeyourphone.jpg">
 <div id="overlay">
-    <img src="rendering/demoimage.png" id="overlayimg">
+    <img id="overlayimg" src="rendering/demoimage.png">
 </div>
 
 </body>
