--- a/captionhtml/meme.html
+++ b/captionhtml/meme.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 <div class="wrap">
-    <img src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+    <img alt="An error has occurred loading your image." src="rendering/demoimage.png">
     <div class="top container" id="fitin1">
         <span class="caption top stroke">CaptionText1</span>
     </div>
