--- a/captionhtml/mycaptionbottom.html
+++ b/captionhtml/mycaptionbottom.html
@@ -23,7 +23,7 @@
 <body>
 
 
-<img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+<img alt="An error has occurred loading your image." class="img" src="rendering/demoimage.png">
 <div class="caption"><span>CaptionText</span>
 </div>
 </body>
