--- a/captionhtml/stuffstretch.html
+++ b/captionhtml/stuffstretch.html
@@ -59,10 +59,10 @@
 </head>
 <body>
 
-<img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+<img alt="An error has occurred loading your image." class="img" src="rendering/demoimage.png">
 <div class="row">
     <div class="caption column"><span class="t">CaptionText</span></div>
-    <img class="stuff column" src="rendering/Stuff.PNG" alt="stuff"/>
+    <img alt="stuff" class="stuff column" src="rendering/Stuff.PNG"/>
 </div>
 
 </body>
