--- a/captionhtml/twittercaption.html
+++ b/captionhtml/twittercaption.html
@@ -35,7 +35,7 @@
 <body>
 <div class="wrap">
     <div class="caption">CaptionText</div>
-    <img class=img src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+    <img alt="An error has occurred loading your image." class=img src="rendering/demoimage.png">
 </div>
 </body>
 <script src="rendering/common.js"></script>
