debian chrome doesnt include times idfk

--- a/captionhtml/motivate.html
+++ b/captionhtml/motivate.html
@@ -44,7 +44,7 @@
 
         .captionsmall {
             font-size: calc(6.7 * var(--1vw));
-            font-family: "Times New Roman", sans-serif;
+            font-family: timesnewroman, "Times New Roman", sans-serif;
             color: white;
             /*margin-bottom: 20px;*/
 
