--- a/captionhtml/twittercaption.html
+++ b/captionhtml/twittercaption.html
@@ -29,6 +29,7 @@
         .caption {
             font-family: helveticaneue, sans-serif;
             font-size: 8vw;
+            text-align: left;
         }
     </style>
 </head>
