--- a/captionhtml/twittercaptiondark.html
+++ b/captionhtml/twittercaptiondark.html
@@ -32,6 +32,7 @@
             font-family: helveticaneue, sans-serif;
             font-size: 8vw;
             color: white;
+            text-align: left;
         }
     </style>
 </head>
